{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 634,
  "lineage": "c88f71a6-8b69-f8fd-49bd-5f38b69b43e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d29b6f966df1537",
            "arn": "arn:aws:ec2:us-east-1:058913055553:instance/i-096bafea4bcee8949",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096bafea4bcee8949",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "A4L",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d822b3e2c09b28ef",
            "private_dns": "ip-10-16-119-12.ec2.internal",
            "private_ip": "10.16.119.12",
            "public_ip": "3.91.42.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fe24357e9da7bb10",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08af359f2a4b31fa1",
            "tags": {
              "Name": "A4L-BASTION"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-053b1395d218b7092"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.sn-web-B",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:internet-gateway/igw-00393d6f5870bd4b3",
            "id": "igw-00393d6f5870bd4b3",
            "owner_id": "058913055553",
            "tags": {
              "Name": "a4l-vpc1-igw"
            },
            "vpc_id": "vpc-01f426870b432f0fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-090fb92b712f843f2",
            "owner_id": "058913055553",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00393d6f5870bd4b3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "a4l-vpc1-rt-web"
            },
            "vpc_id": "vpc-01f426870b432f0fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ad3a39a9f5bc91d",
            "route_table_id": "rtb-090fb92b712f843f2",
            "subnet_id": "subnet-07e54ecc32709d070"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_table",
            "aws_subnet.sn-web-A",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd99fb781d1fc909",
            "route_table_id": "rtb-090fb92b712f843f2",
            "subnet_id": "subnet-08af359f2a4b31fa1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_table",
            "aws_subnet.sn-web-B",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047deb2b26ad76ecf",
            "route_table_id": "rtb-090fb92b712f843f2",
            "subnet_id": "subnet-08127a624f2002bde"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_table",
            "aws_subnet.sn-web-C",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:security-group/sg-053b1395d218b7092",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053b1395d218b7092",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": null,
            "owner_id": "058913055553",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f426870b432f0fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-DB-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:subnet/subnet-032648a44edcb8c8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.16.0/20",
            "id": "subnet-032648a44edcb8c8b",
            "map_public_ip_on_launch": false,
            "owner_id": "058913055553",
            "tags": {
              "Name": "sn-db-A"
            },
            "vpc_id": "vpc-01f426870b432f0fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-app-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:subnet/subnet-0d9b0b1aedcd36312",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.32.0/20",
            "id": "subnet-0d9b0b1aedcd36312",
            "map_public_ip_on_launch": false,
            "owner_id": "058913055553",
            "tags": {
              "Name": "sn-app-A"
            },
            "vpc_id": "vpc-01f426870b432f0fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-app-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:subnet/subnet-048f2687b806e63aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.96.0/20",
            "id": "subnet-048f2687b806e63aa",
            "map_public_ip_on_launch": false,
            "owner_id": "058913055553",
            "tags": {
              "Name": "sn-app-B"
            },
            "vpc_id": "vpc-01f426870b432f0fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-app-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:subnet/subnet-0cac880769a1bea68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.160.0/20",
            "id": "subnet-0cac880769a1bea68",
            "map_public_ip_on_launch": false,
            "owner_id": "058913055553",
            "tags": {
              "Name": "sn-app-C"
            },
            "vpc_id": "vpc-01f426870b432f0fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-db-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:subnet/subnet-083289678a337ad4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.80.0/20",
            "id": "subnet-083289678a337ad4e",
            "map_public_ip_on_launch": false,
            "owner_id": "058913055553",
            "tags": {
              "Name": "sn-db-B"
            },
            "vpc_id": "vpc-01f426870b432f0fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-db-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:subnet/subnet-0d74ee38fe005525f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.144.0/20",
            "id": "subnet-0d74ee38fe005525f",
            "map_public_ip_on_launch": false,
            "owner_id": "058913055553",
            "tags": {
              "Name": "sn-db-C"
            },
            "vpc_id": "vpc-01f426870b432f0fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-web-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:subnet/subnet-07e54ecc32709d070",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.48.0/20",
            "id": "subnet-07e54ecc32709d070",
            "map_public_ip_on_launch": true,
            "owner_id": "058913055553",
            "tags": {
              "Name": "sn-web-A"
            },
            "vpc_id": "vpc-01f426870b432f0fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-web-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:subnet/subnet-08af359f2a4b31fa1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.112.0/20",
            "id": "subnet-08af359f2a4b31fa1",
            "map_public_ip_on_launch": true,
            "owner_id": "058913055553",
            "tags": {
              "Name": "sn-web-B"
            },
            "vpc_id": "vpc-01f426870b432f0fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-web-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:subnet/subnet-08127a624f2002bde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.176.0/20",
            "id": "subnet-08127a624f2002bde",
            "map_public_ip_on_launch": true,
            "owner_id": "058913055553",
            "tags": {
              "Name": "sn-web-C"
            },
            "vpc_id": "vpc-01f426870b432f0fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:vpc/vpc-01f426870b432f0fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.16.0.0/16",
            "default_network_acl_id": "acl-0a05a442199ceec8d",
            "default_route_table_id": "rtb-0ebb8f79419f50041",
            "default_security_group_id": "sg-0ee692b6147744a30",
            "dhcp_options_id": "dopt-764cf40c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01f426870b432f0fb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ebb8f79419f50041",
            "owner_id": "058913055553",
            "tags": {
              "Name": "a4l-vpc1"
            }
          }
        }
      ]
    }
  ]
}